--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 'WVD[[:space:]]Connector.zip' filter=lfs diff=lfs merge=lfs -text
 WVD[[:space:]]Connector.zip filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
